--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+title: Hornets
+description: Hornets is a comic about Moe, a kid with a ‘horizontal Mohawk’ trying to get through everyday life.
 remote_theme: pages-themes/cayman@v0.2.0
+show_downloads: true
 plugins:
 - jekyll-remote-theme
+github:
+  is-project-page: false
