--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hornets
-description: Hornets is a comic about Moe, a kid with a ‘horizontal Mohawk’ trying to get through everyday life.
+description: Hornets is a comic about Moe, a kid with a "horizontal Mohawk" trying to get through everyday life.
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
